<resources>
    <string name="app_name">Mental.ly-app</string>
    <string name="logo_mental_ly">Logo Mental.ly</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="hello">Hello,</string>
    <string name="sample_name">Muhammad Fuad Hamidan</string>
    <string name="what_do_you_need">What do You need?</string>
    <string name="self_diagnose">Self Diagnose</string>
    <string name="diagnose_from_symptoms">Diagnose from Symptoms</string>
    <string name="share_your_feelings">Share your Feelings</string>
    <string name="diagnose_from_symptomps_desc">Identify your mental health through symptoms.</string>
    <string name="share_your_feelings_desc">Express emotions and understand yourself better.</string>
    <string name="read_articles">Read Articles</string>
    <string name="error_password">Password must be at least 8 characters long</string>
    <string name="see_all">see all</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="welcome_head">Welcome</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="dont_have_an_account">Don\'t Have an Account? </string>
    <string name="register_button">Register Now!</string>
    <string name="register_guide">Please Register to create an account!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="show_password">Show Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">ALready have an account?</string>
    <string name="login_now">Login now!</string>
    <string name="login_using_google">Login Using Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name_is_required">Name is required</string>
    <string name="email_required">Email required</string>
    <string name="password_required">Password required</string>
    <string name="invalid_email">invalid email</string>
    <string name="judul_berita">Judul Berita</string>
    <string name="date_updated">Date Updated</string>
    <string name="news_example">News Example</string>
    <string name="back_to_home">back to home</string>
    <string name="symptoms_diagnose">Symptoms Diagnose</string>
    <string name="next">Next</string>
    <string name="your_gender">Your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="your_age">Your Age</string>
    <string name="years">years</string>
    <string name="lets_start">Lets Start...</string>
    <string name="how_would_you_rate_your_study_or_work_pressure">How would you rate your study or work pressure?</string>
    <string name="very_low">Very Low</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="very_high">Very High</string>
    <string name="back">Back</string>
    <string name="how_severe_is_your_study_or_work_satisfied_at_the_moment">How severe is your study or work satisfied at the moment?</string>
    <string name="how_high_is_your_stress_level">How high is your stress level?</string>
    <string name="how_would_you_categorize_your_dietary_habits">How would you categorize your dietary habits?</string>
    <string name="unhealthy">UnHealthy</string>
    <string name="healthy">Healthy</string>
    <string name="_5_hours"><![CDATA[< 5 Hours]]></string>
    <string name="_8_hourse"><![CDATA[> 8 Hourse]]></string>
    <string name="_7_8_hourse">7-8 Hourse</string>
    <string name="_5_6_hourse">5-6 Hourse</string>
    <string name="what_is_your_typical_sleep_duration_in_a_day">What is your typical sleep duration in a day?</string>
    <string name="what_is_your_typical_work_duration_in_a_day">What is your typical work duration in a day?</string>
    <string name="have_you_ever_experienced_thoughts_of_self_harm_or_suicide">Have you ever experienced thoughts of self-harm or suicide?</string>
    <string name="is_there_a_history_of_mental_illness_in_your_family">Is there a history of mental illness in your family?</string>
    <string name="have_you_ever_been_diagnosed_with_experienced_symptoms_of_depression">Have you ever been diagnosed with experienced symptoms of depression?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="hours">Hours</string>
    <string name="finish">Finish</string>
    <string name="back_depression_inventory_bdi_skor">Back Depression Inventory (BDI) SKOR</string>
    <string name="detected_for_mental_health_issues">Detected for Mental Health Issues</string>
    <string name="please_fill_in_all_the_data">Please fill in all the data</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="logout">LogOut</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="success_your_account_is_ready_please_log_in_to_access_your_mental_ly_experience">Success! Your account is ready. Please log in to access your Mental.ly experience.</string>
    <string name="normal">Normal</string>
    <string name="normal_result">Your mental health seems stable! Keep up the good work! Maintain a balanced routine, enjoy what you do, and rest well. Stay joyful and healthy!</string>
    <string name="low_severity">Low Severity</string>
    <string name="low_sevirity_result">At this stage, it’s important to monitor your mental well-being. Consider taking short breaks, engaging in light physical activities, and maintaining a healthy sleep routine. If symptoms persist, consulting a mental health professional could help.</string>
    <string name="moderate_severity">Moderate Severity</string>
    <string name="moderete_severity">Your mental health may benefit from reducing your workload and taking regular breaks. Establish a consistent sleep schedule and focus on stress-reducing activities. Don’t hesitate to consult a mental health professional for personalized guidance.</string>
    <string name="high_severity">High Severity</string>
    <string name="high_sevirity">It’s crucial to address your well-being by balancing rest, relaxation, and work. Light physical activities, such as walking or stretching, can help ease anxiety. Please consult a mental health professional as soon as possible to get support and create a tailored plan for recovery.</string>
    <string name="very_high_severity">Very High Severity!</string>
    <string name="very_high_severity_result">If you\'re feeling overwhelmed or unable to manage daily activities, seeking immediate assistance from a mental health professional is essential. They can offer the necessary support and help you navigate this challenging time. Take a break from any stressful commitments and prioritize your health above all.</string>
    <string name="input_should_be_1_hour_to_12_hours">Input should be 1 hour to 12 hours</string>
    <string name="_22_january_2024">22 January 2024</string>
    <string name="news_image">News_Image</string>
    <string name="world_mental_health_day">World Mental Health Day falls on October 10</string>
    <string name="our_best_mental_health_tips_backed_by_research">Our best mental health tips - backed by research,</string>
    <string name="mental_health_disorders">Mental Health disorders</string>
    <string name="mental_health_tips">Protecting our mental health is easier than you might think. We can all do it every day, and with simple activities that help us feel good, we’re better able to cope with life. Each of our tips has been created to help us look after our mental health. Importantly, each one is backed up by evidence from research, including the Mental Health Foundation’s ground-breaking study.\n\n1. Get closer to nature: We all live with worries and fears, uncertainties, losses that leave us sad and pressures that make us feel stressed. Nature can have a really calming effect on us.\n\n2. Get more from your sleep: Anyone who has struggled with sleep will know what a difference it makes to our bodies, minds and ability to cope with life.\n\n3. Keep moving: Our bodies and minds are connected, so looking after ourselves physically also helps us prevent problems with our mental health (it works the other way around, too).\n\n4. Eat healthy food: Food and drink affect our bodies, brains and mood – for good or bad.\n\n5. Be kind and help create a better world: If you have ever felt lonely, you will know how much it helps to have even a small connection with someone else.\n\n6. Be curious and open-minded to new experiences: We can all get stuck in familiar ways, like how we spend our time and what we think about ourselves and the world.\n\n7. Plan things to look forward to: Life throws all sorts at us, and during hard times, we may feel hopeless and not have the energy to plan for the future.\n\n8. Learn to understand and manage your feelings: Feeling very upset can interfere with our lives, making it hard to think clearly or work, relax, study, sleep or deal with other people.\n\n9. Talk to someone you trust for support: Many of us have learned to bottle things up inside us and try to ignore painful feelings. It can take a lot of courage to tell someone else how we’re feeling or what we’re finding hard, especially if we don’t usually do that kind of thing.\n\n10. Be aware of using drugs and/or alcohol to cope with difficult feelings: Many of us sometimes use drugs to block out “difficult” feelings such as sadness, fear or shame.</string>
    <string name="oops_we_re_making_some_improvements_predict_your_feelings_will_be_back_soon_better_than_ever_thanks_for_your_patience">Oops! We\'re making some improvements. Predict Your Feelings will be back soon, better than ever. Thanks for your patience!</string>
    <string name="coming">Coming</string>
    <string name="soon">Soon...</string>
    <string name="about_mental_ly">About Mental.ly</string>
    <string name="about_mentally">Mental.ly is a leading mental health application designed to provide comprehensive support and resources for individuals facing mental health challenges. With an easy-to-use interface and advanced features, Mental.ly aims to revolutionize the way people manage and improve their mental well-being.</string>
</resources>