<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    tools:context="com.c242ps188.mentally_app.ui.view.diagnose.DiagnoseSymptomsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_rounded_corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/back_to_home"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/symptoms_diagnose"
                android:textColor="@color/md_theme_primary"
                android:textSize="16sp" />

        </LinearLayout>

        <!-- Diagnose -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- GENDER AND AGE -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:paddingBottom="66dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="gone">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/diagnose_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_gender"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="11dp"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            tools:ignore="RtlSymmetry">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_semibold"
                                android:text="@string/your_gender"
                                android:textColor="@color/md_theme_primary"
                                android:textSize="16sp" />

                            <RadioGroup
                                android:id="@+id/radio_group_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/radio_male"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:buttonTint="@color/md_theme_primary"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="@string/male"
                                    android:textSize="14sp" />

                                <RadioButton
                                    android:id="@+id/radio_female"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:buttonTint="@color/md_theme_primary"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="@string/female"
                                    android:textSize="14sp" />
                            </RadioGroup>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_age"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        app:cardCornerRadius="11dp"
                        app:layout_constraintTop_toBottomOf="@id/cv_gender">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="vertical"
                            android:paddingStart="16dp"
                            tools:ignore="RtlSymmetry">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_semibold"
                                android:text="@string/your_age"
                                android:textColor="@color/md_theme_primary"
                                android:textSize="16sp" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center_vertical"
                                android:orientation="horizontal">

                                <Spinner
                                    android:id="@+id/spinner_age"
                                    android:layout_width="80dp"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/bg_spinner"
                                    android:padding="8dp"
                                    android:spinnerMode="dropdown" />

                                <ImageView
                                    android:id="@+id/icon_spinner"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_gravity="center_vertical"
                                    android:contentDescription="@string/your_age"
                                    android:src="@drawable/ic_arrow_down" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="12dp"
                                    android:fontFamily="@font/poppins_semibold"
                                    android:text="@string/years"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

            <!-- WORK PRESSURE -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="32dp"
                android:paddingBottom="66dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/diagnose_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_lets_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/lets_start"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:max="100"
                        android:progress="12"
                        android:progressDrawable="@drawable/bg_progress_bar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_lets_start" />

                    <TextView
                        android:id="@+id/tv_pressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/how_would_you_rate_your_study_or_work_pressure"
                        android:textColor="@color/md_theme_primary"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/progress_bar" />


                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_pressure">

                        <RadioButton
                            android:id="@+id/rb_very_low"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_radio_button"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/very_low" />

                        <RadioButton
                            android:id="@+id/rb_low"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/bg_radio_button"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/low" />

                        <RadioButton
                            android:id="@+id/rb_moderate"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/bg_radio_button"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/moderate" />

                        <RadioButton
                            android:id="@+id/rb_high"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/bg_radio_button"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/high" />

                        <RadioButton
                            android:id="@+id/rb_very_high"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:background="@drawable/bg_radio_button"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/very_high" />

                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/next"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>